# semantic-sql-service

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  api_documentation.txt  docker-compose.yml  migration_metrics_datasource.sql  output.json  output_all.json  pyproject.toml  semantic-cli  test_output.txt
alembic/: env.py
alembic/versions/: 2026_01_13_1710-a1b2c3d4e5f6_initial_schema_with_optimizations.py  2026_01_14_1709-62ec16b2b817_consolidated_initial.py  2026_01_16_1542-1bcbf4bb6d12_initial_schema_consolidated.py
cli/: main.py
cli/commands/: discovery.py
cli/core/: client.py  config.py  formatter.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CODE_STYLE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  FIXES.md  QUICKSTART.md  TROUBLESHOOTING.md
scripts/: db_migration_slugs.py  fix_schema_drift.py  migration.sql  migration_searchable.sql  migration_synonyms_fix.sql  regenerate_golden_sql_embeddings.py  regenerate_synonym_embeddings.py  seed_multi_datasource.py  seed_saas_billing.py  seed_synonyms_test.py  seed_wms_metadata.py  wms_ddl.txt
scripts/archive/: migration_all_search_vectors_to_simple.sql  migration_embedding_hash.sql  migration_log_indexes.sql  (+8 more)
src/: __init__.py  main.py  seed_saas_billing.py
tests/: AGENTS.md  conftest.py  test_admin.py  test_agentic.py  test_context.py  test_embedding_persistence.py  test_learning.py  test_main.py  test_mcp_resolve_context.py  test_migration.py  test_ontology.py  test_retrieval.py  test_retrieval_discovery.py  test_searchable_mixin.py  test_semantics.py  test_synonym_integration.py
(+128 files in other folders)
